2014-09-19  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (flag-tables): New phony to build flag-tables.c.
	(flag-tables.c): Remove rule to build.
	(exe): Rename to EXEEXT resp. BUILD_EXEEXT.
	(AVRGCC): Rename to CC_FOR_AVR.
	(CFLAGS_FOR_HOST, CFLAGS_FOR_AVR): New.
	(CC_FOR_BUILD, CFLAGS_FOR_BUILD): New variables.
	(gen-flag-tables): Use them instead of CC, CFLAGS.
	(all-xmega, exit-xmega): Remove dead rules.

	Revert to 2014-09-18 trunk r129: Undo:

	* gen-flag-tables.c (main): Accept argv[1] as input file name.

2014-09-18  Georg-Johann Lay  <avr@gjlay.de>

	* gen-flag-tables.c (main): Accept argv[1] as input file name.

2014-09-18  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (leave): Typo.  Also print program_size in decimal.
	(do_fast): Remove dead code.
	* avr-insn.def: Typo.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (func_MOV, func_MOVW, func_LDI): Make inline.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (t_load): New variable.
	(parse_args) [flag_have_runtime]: Set it.
	(leave) [flag_have_runtime]: Print info about load phase.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (t_decode, t_execute): New variables.
	(main) [flag_have_runtime]: Set them.
	(leave) [flag_have_runtime]: Print info about decode and execute phase.
	(time_sub): Change interface to return sec, us and ms.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* Makefile (CFLAGS): Resurrect -O3.
	* avr-insns.def (LDI, MOV, MOVW): Move before...
	(LAST_FAST): This new insn.
	* avrtest.c (do_fast): New function.
	(do_step): Use it for IDs < ID_LAST_FAST.
	(func_LAST_FAST): New function.
	(leave): Fix missing 0s in %ld.

2014-09-17  Georg-Johann Lay  <avr@gjlay.de>

	* avrtest.c (data_read_byte_raw): Factor out magic ports to...
	(data_read_magic_port): ...this new function.
	(data_write_byte_raw): Factor out magic ports to...
	(data_write_magic_port): ...this new function.
	(do_step): Move TICKS_PORT handling to data_read_magic_port.